--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   neon_widgets: ^2.0.0
   animated_text_kit: ^4.2.2
+  firebase_core: ^3.7.0
+  firebase_auth: ^5.3.2
+  awesome_dialog: ^3.2.1
 
 dev_dependencies:
   flutter_test:
