--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   firebase_core: ^3.7.0
   firebase_auth: ^5.3.2
   awesome_dialog: ^3.2.1
+  flutter_spinkit: ^5.2.1
+  cloud_firestore: ^5.5.0
 
 dev_dependencies:
   flutter_test:
