--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   awesome_dialog: ^3.2.1
   flutter_spinkit: ^5.2.1
   cloud_firestore: ^5.5.0
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
